# redis-client-benchmarks

benchmarks/C/: README.md  c_hiredis_performance.c
benchmarks/Crystal/: README.md  crystal_redis_performance.cr
benchmarks/Go/: README.md  go_radix_performance.go  go_redigo_performance.go
benchmarks/Java/: JavaJedisPerformance.java  README.md
benchmarks/Node.js/: README.md  nodejs_ioredis_performance.js  package.json
benchmarks/Ruby/: ruby_redisrb_hiredis_performance.rb  ruby_redisrb_performance.rb
plot_results/: plot_results.py  pyproject.toml
